changing to virtual threads scenario3