@@ -312,7 +312,8 @@ public class RestClientBuilderImpl implements RestClientBuilder {
         if (this.executorService != null) {
             resteasyClientBuilder.executorService(this.executorService);
         } else {
-            this.executorService = Executors.newCachedThreadPool();
+            ThreadFactory threadFactory =Thread.ofVirtual().factory();
+            this.executorService = Executors.newCachedThreadPool(threadFactory);
             resteasyClientBuilder.executorService(executorService, true);
         }
         resteasyClientBuilder.register(DEFAULT_MEDIA_TYPE_FILTER);
